--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,7 @@ pickledb = "~0.4.0"
 quick-error = "1.2.2"
 rand = "~0.7.3"
 rand_chacha = "~0.2.2"
-sn_routing = { git = "https://github.com/joshuef/routing", branch = "Lost-conn-startup" }
+sn_routing = { git = "https://github.com/yoga07/sn_routing", branch = "start-up" }
 self_update = { version = "~0.16.0", default-features = false, features = ["rustls", "archive-tar", "archive-zip", "compression-flate2", "compression-zip-deflate"] }
 serde = { version = "1.0.111", features = ["derive", "rc"] }
 serde_json = "1.0.53"
