--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,8 +42,8 @@ unwrap = "1.2.1"
 crdts = "4.2.0"
 ed25519-dalek = "1.0.0-pre.4"
 sha2 = "0.8.1"
-sn_data_types = "~0.11.30"
-sn_transfers = "~0.2.2"
+sn_data_types = "~0.11.31"
+sn_transfers = "~0.2.4"
 ed25519 = "1.0.1"
 signature = "1.1.0"
 tokio = { version = "~0.2.5", features = ["macros", "fs", "sync"] }
@@ -53,7 +53,7 @@ sn_launch_tool = { git = "https://github.com/maidsafe/sn_launch_tool.git" }
 [dev_dependencies]
 maplit = "1.0.1"
 tempdir = "~0.3.7"
-sn_client = { git = "https://github.com/maidsafe/sn_client", branch="master" }
+sn_client = { git = "https://github.com/maidsafe/sn_client" }
 tokio = { version="~0.2.21", features=["rt-core", "blocking", "stream", "rt-util", "rt-threaded"] }
 futures = "~0.3.5"
 
