--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,7 @@ crdts = "4.3.0"
 ed25519-dalek = "1.0.0-pre.4"
 # sn_routing = "~0.47.0"
 sn_routing = { git = "https://github.com/oetyng/sn_routing", branch = "split-section-funds" }
-sn_transfers = { path="../sn_transfers"}
+sn_transfers = { git = "https://github.com/joshuef/sn_transfers", branch = "ClarifyErrors" }
 sn_messaging = { git = "https://github.com/oetyng/sn_messaging", branch = "split-section-funds" }
 sn_data_types = "~0.15.0"
 ed25519 = "1.0.1"
