--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ ed25519-dalek = "1.0.0-pre.4"
 sn_routing = { git = "https://github.com/oetyng/sn_routing", branch = "split-section-funds" }
 # sn_routing = { path = "../sn_routing" }
 #sn_transfers = "~0.4.0"
+# sn_transfers = { path="../sn_transfers"}
 sn_transfers = { git = "https://github.com/joshuef/sn_transfers", branch = "ClarifyErrors" }
 sn_messaging = { git = "https://github.com/oetyng/sn_messaging", branch = "split-section-funds" }
 sn_data_types = "~0.15.0"
