--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,8 @@ serde_json = "1.0.53"
 structopt = "~0.3.17"
 crdts = "4.3.0"
 ed25519-dalek = "1.0.0"
-sn_routing = "~0.51.0"
+sn_routing = {git="https://github.com/joshuef/sn_routing", branch="52-w-old-deps"}
+# sn_routing = {path="../sn_routing"}
 sn_transfers = "~0.5.0"
 sn_messaging = "8.0.0"
 sn_data_types = "~0.16.0"
