--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,9 +31,21 @@ serde_json = "1.0.53"
 structopt = "~0.3.17"
 crdts = "6.3.2"
 ed25519-dalek = "1.0.0"
-sn_routing = "~0.71.0"
 sn_data_types = "~0.18.3"
-sn_messaging = "25.0.0"
+
+# sn_routing = "~0.71.0"
+# sn_messaging = "25.0.0"
+
+# sn_routing = "~0.71.0"
+# sn_data_types = "~0.18.3"
+# sn_messaging = "25.1.0"
+sn_messaging = {path="../sn_messaging"}
+# sn_routing = {git="https://github.com/joshuef/sn_routing", branch="UpdateBytesInMsgDest"}
+
+sn_routing = {path="../sn_routing"}
+# sn_messaging = {git="https://github.com/joshuef/sn_messaging", branch="CheckingEfficiencyForSerialise"}
+
+
 sn_transfers = "~0.7.3"
 ed25519 = "1.0.1"
 signature = "1.1.10"
