--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,11 +39,11 @@ sn_data_types = "~0.18.3"
 # sn_routing = "~0.71.0"
 # sn_data_types = "~0.18.3"
 # sn_messaging = "25.1.0"
-sn_messaging = {path="../sn_messaging"}
-# sn_routing = {git="https://github.com/joshuef/sn_routing", branch="UpdateBytesInMsgDest"}
+# sn_messaging = {path="../sn_messaging"}
+sn_messaging = {git="https://github.com/joshuef/sn_messaging", branch="BytesMut"}
+sn_routing = {git="https://github.com/joshuef/sn_routing", branch="DestDirect"}
 
-sn_routing = {path="../sn_routing"}
-# sn_messaging = {git="https://github.com/joshuef/sn_messaging", branch="CheckingEfficiencyForSerialise"}
+# sn_routing = {path="../sn_routing"}
 
 
 sn_transfers = "~0.7.3"
